add zerolog
